FP-877: Onb. Admin UI: Pill Truncation Fix 1
Ensure that white-space is only set on <Pill> as desired, because <OnboardingUser> does not need it set.

--- a/client/src/components/Onboarding/OnboardingAdmin.module.scss
+++ b/client/src/components/Onboarding/OnboardingAdmin.module.scss
@@ -95,6 +95,12 @@ tbody {
 .status {
   line-height: 19px;
 }
+/* HACK: This selector has knowledge of sibling component's internal markup */
+/* FAQ: Because we cannot pass `className`to <Pill> via <OnboardingStatus> */
+/* FAQ: Because <OnboardingStatus> has a superfluous root element */
+/* i.e. <OnboardingStatus>'s <Pill> */ .status-text > * {
+  white-space: nowrap;
+}
 
 .reset > * {
   padding-left: 8px;
